# SAP_AGENT_MMSD

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  security.yml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_approval_and_audit_tables.py  002_add_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/connectors/: base.py  factory.py  mock_connector.py  odata_connector.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: __init__.py  engine.py
backend/app/knowledge/: mm_rules.py  sd_rules.py  tcodes.py
backend/app/models/: action.py  approval.py  auth.py  context.py  diagnosis.py  simulation.py
backend/app/schemas/: auth.py  requests.py  responses.py
backend/app/services/: action_planner.py  ai_service.py  approval_facade.py  approval_service.py  approval_service_db.py  auth_service.py  context_service.py  diagnostic_service.py  execution_service.py  impact_simulator.py
backend/tests/: conftest.py
backend/tests/e2e/: test_scenarios.py
backend/tests/fixtures/: odata_error_document_not_found.json  odata_error_service.json  odata_po_ecc.json  (+6 more)
docs/: DEPLOYMENT.md  SAP_ODATA_SETUP.md
frontend/: Dockerfile.frontend  app.js  index.html  nginx.conf  package-lock.json  package.json  styles.css  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: init_db.sql
(+91 files in other folders)
